--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
 project(po)
 
-file(GLOB srcs "*.h" "*.cpp")
-add_executable(po ${srcs}) 
+file(GLOB srcs "*.cpp")
+list(FILTER srcs EXCLUDE REGEX "tests.cpp")
+list(FILTER srcs EXCLUDE REGEX "main.cpp")
+
+add_executable(po "main.cpp" ${srcs}) 
+add_executable(po_tests "tests.cpp" ${srcs})
